# silkie

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  silkie.py  ssg-config.ini  test.txt  test2.md  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml
blueprintmd/: markdowntest1.html
examples/md/: markdowntest1.md
silkie/: __init__.py  __main__.py  cli.py  definitions.py  options.py  silkie.py  utils.py
tests/data/config/: all_markdown_files.json  all_text_files.json  single_text_file.json  single_text_file_custom_lang.json  single_text_file_custom_stylesheet.json
tests/data/markdown/: test_paragraphs.md
tests/data/text/: Lorem Ipsum.txt
tests/fixture/markdown/: test_paragraphs.html
tests/fixture/text/: Lorem Ipsum (custom lang).html  Lorem Ipsum (custom stylesheet).html  Lorem Ipsum.html
tests/integration/: test_config.py  test_markdown.py  test_text.py
tests/unit/: test_get_file_name.py  test_is_filetype_supported.py
