[metadata]
name = silkie
version = 0.9.0
author = Oliver Pham
author_email = oliverptpham@gmail.com
description = Static site generator with the smoothness of silk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliver-pham/silkie
project_urls =
    Bug Tracker = https://github.com/oliver-pham/silkie/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = silkie
packages = find:
python_requires = >=3.9

[options.packages.find]
where = silkie