[metadata]
name = silkie
version = 1.0.7
author = Oliver Pham
author_email = oliverptpham@gmail.com
description = Static site generator with the smoothness of silk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliver-pham/silkie
project_urls =
    Bug Tracker = https://github.com/oliver-pham/silkie/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = silkie
python_requires = >=3.9
install_requires =
    click >= 8.0.0
    markdown >= 3.3.0
    yattag >= 1.14.0
    python-frontmatter >= 1.0.0

[options.entry_points]
console_scripts = 
    silkie = silkie.cli:silkie

